estilos.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family: Arial, sans-serif;
}

;body{
    background:linear-gradient(to bottom,#07153a,#020d24);
    color:white;
}

/* HEADER */
header{
    background:#f58220;
    padding:30px;
    text-align:center;
}

header h1{
    font-size:55px;
    color:white;
}

/* MENÚ */
nav{
    background:#041033;
    padding:20px;
    display:flex;
    justify-content:center;
    gap:80px;
}

nav a{
    color:white;
    text-decoration:none;
    font-size:20px;
    transition:0.3s;
}

nav a:hover{
    color:#f58220;
}

/* CONTENIDO */

  main{
    width:90%;
    margin:auto;
    padding:40px 0;
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
    gap:30px;

    align-items:start;
}

/* TARJETAS */
.card{
    background:linear-gradient(145deg,#1f2f7a,#16245f);
    padding:30px;
    border-radius:25px;
    box-shadow:0 10px 25px rgba(0,0,0,0.5);
    transition:0.4s;
    border:1px solid rgba(255,255,255,0.1);
    color:white;
    min-height:250px;
}

.card:hover{
    transform:translateY(-10px);
}


.card h2{
    margin-bottom:15px;
    font-size:35px;
    color:white;
}


/* formulario */
form{
    display:flex;
    flex-direction:column;
    gap:15px;
    max-width:500px;
}

input,
textarea{
    padding:15px;
    border:none;
    border-radius:10px;
    font-size:16px;
}

textarea{
    height:120px;
}

button{
    background:linear-gradient(to right,#f58220,#ff9a3d);
    color:white;
    border:none;
    padding:15px;
    border-radius:12px;
    font-size:18px;
    cursor:pointer;
    transition:0.3s;
    font-weight:bold;
}

button:hover{
    transform:scale(1.05);
}

/* footer */
footer{
    background:#041033;
    text-align:center;
    padding:20px;
    margin-top:40px;
}/* responsive */

@media(max-width:768px){

    header h1{
        font-size:35px;
    }

    nav{
        flex-direction:column;
        gap:20px;
        text-align:center;
    }

    main{
        grid-template-columns:1fr;
    }

    .card{
        width:100%;
    }

}
/* feedback */

.feedback-msg {
    font-size: 14px;
    font-weight: 600;
    text-align: center;
    min-height: 24px;
    margin: 5px 0;
    padding: 8px;
    border-radius: 8px;
    opacity: 0;
    transform: translateY(-5px);
    transition: all 0.3s ease;
}


.error-active {
    opacity: 1;
    transform: translateY(0);
    color: #ff4d4d;
    background: rgba(255, 77, 77, 0.1);
    border: 1px solid rgba(255, 77, 77, 0.2);
}

.success-active {
    opacity: 1;
    transform: translateY(0);
    color: #2ed573;
    background: rgba(46, 213, 115, 0.1);
    border: 1px solid rgba(46, 213, 115, 0.2);
}


.input-error {
    border: 2px solid #ff4d4d !important;
    outline: none;
}

.input-success {
    border: 2px solid #2ed573 !important;
    outline: none;
}


input, textarea {
    transition: border 0.3s ease;
    border: 2px solid transparent;
}

